--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,3 +1,37 @@
 .card { 
-    width: 25%;
+    background-color: white;
+    border-radius: 1px;
+    height: 10%;
+    width: 10%;
+    margin: 1rem; 
+    padding: 20px;
+    max-width:100%;
+    height:auto;
+    flex-flow: row wrap;
+    margin: 0 auto;
+    
+
 }
+
+img {
+    height: 100px;
+    width: 200px;
+    box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+}
+
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+  }
+  
+  /* Clear floats after image containers */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .cardContainer {
+      margin-left: 480px;
+  }
